# Pint

./: .Rbuildignore  .gitignore  .gitmodules  Cargo.toml  DESCRIPTION  LICENSE  Makefile  Makevars.in  NAMESPACE  README.md  X2_from_X.c  Y_n8kp4k_92219  Y_nlethals50_v15803.csv  autogen.sh  bij_ind_nolethals.csv  cleanup  config.h.in  configure  configure.ac  convert_to_matrixmarket.R  false_sharing_investigation.txt  fit_all.sh  fit_large.sh  fit_small.sh  fits_testing_only.R  get_glmnet_interactions.sh  get_num.c  glmnet.R  install_and_run.R  lm_example.R  meson.build  meson_options.txt  nolethals.name  plot_lasso_stats.R  process_benches.sh  randomX.csv  randomY.csv  really_small_X.csv  really_small_X2.csv  runtimes_w_bins  (+14 more)
Coordinate-descent-algorithm-LASSO/: README.md
Coordinate-descent-algorithm-LASSO/src/: demo_compare_w_sklearn.py  demo_real_world_data.py  demo_simulated_data.py  scaled_X.csv  testX2.csv  testXSmall.csv  testY.csv  testYSmall.csv  test_int_data.py  test_int_output
PrecRecF1/: PrecRecF1.R  dat_precrecf1_lasso
R/: lasso.R  pint.R
break_gsl/: Makefile  break_gsl.c
data/: 4_vs_1_core.vsz  4core_all_set_sizes.csv  4core_slow_records.txt  4core_slow_set_sizes.csv  64_vs_1_core.vsz  relative_speed_ms.csv  runtimes_mergeset_4590_home_small_1core.csv  runtimes_mergeset_4590_home_small_4cores.csv  slow_records_relative_speed.txt  small_1_runtimes.csv  small_64_runtimes.csv
fits_glinternet/: PrecRecF1.R  dat_precrecf1_xyzFALSE.rds
rust_rewrite/: Cargo.toml  Makefile  build.rs
rust_rewrite/src/: lib.rs  main.rs  turbopfor.rs
script/: run-tests.bash
scripts/: bench.sh  bench_large.sh  bench_small.sh  collect_runtimes.sh  convert_rds_dir_to_csv_dir.sh  install-hooks.bash  pre-commit.bash  rds_to_csv.R  run-tests.bash
shotgun/: lasso.cpp  logreg.cpp  mm_lasso  mm_lasso.cpp  read_matrix_market.cpp  x.mtx
src/: .clang-format  LassoTesting.c  Makefile.am  Makevars  Makevars.in  Makevars.win  Pint.c  Pint.cpp  Pint.h  X2_from_X.c  bitndpack256v32.h  bitndpack32.h  compress.h  csv.c  csv.cpp  csv.h  lasso_exe.c  lasso_lib.c  lasso_lib.h  lasso_package.c  liblasso.c  liblasso.cpp  liblasso.h  log.c  log.cpp  log.h  main.rs  meson.build  p4ndenc256v32.h  p4ndenc32.h  pruning.c  pruning.cpp  pruning.h  queue.c  queue.cpp  queue.h  regression.c  regression.cpp  regression.h  robin_hood.h  (+16 more)
testcase/n1000_p100_SNR5_nbi100_nbij50_nlethals0_viol0_3231/: X.csv  Y.csv
testcase/n2000_p1000_SNR5_nbi10_nbij200_nlethals50_viol0_11057/: X.csv  Y.csv
testcase/n8000_p4000_SNR5_nbi40_nbij800_nlethals200_viol0_91159/: Y.csv
testing_stuff/: error_comp_cost.txt  process_error_comp.sh
tests/: func-tests-cpu.c  func-tests.c  func-tests.cpp  meson.build  misc-tests.c  misc-tests.cpp  test_all_function_calls.c
utils/src/: X2_from_X.c  X2_from_X.cpp  get_num.cpp  lasso_exe.c  lasso_exe.cpp  meson.build  test_opencl  test_opencl.c  test_opencl.cpp
