[package]
name = "lasso_rust"
version = "0.1.0"
authors = ["Kieran Elmes <kelmes@caelus.nz>"]
edition = "2018"
links = "TurboPFor"
build = "build.rs"

[dependencies]
csv = "1.1"
clap = "2.33.0"
bitpacking = "0.8.2"
rayon = "1.3.0"
crossbeam-utils = "0.7.0"
streaming-iterator = "0.1.5"
rand = "0.7.2"
libc = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "1000x100"
harness = false

[profile.release]
debug = true
