bin_PROGRAMS = lassoExe
lib_LTLIBRARIES = liblasso.la LassoTesting.la
liblasso_la_SOURCES = lasso_lib.c
liblasso_la_CFLAGS = $(GLIB_CFLAGS) $(GSL_CFLAGS) $(NCURSES_CFLAGS)
liblasso_la_LDFLAGS = $(GLIB_LIBS) $(GSL_LIBS) $(NCURSES_LIBS)
lassoExe_SOURCES = lasso_exe.c lasso_lib.c
lassoExe_CFLAGS = $(GLIB_CFLAGS) $(GSL_CFLAGS) $(NCURSES_CFLAGS)
lassoExe_LDFLAGS = $(GLIB_LIBS) $(GSL_LIBS) $(NCURSES_LIBS)
lassoExe_LDADD = liblasso.la
LassoTesting_la_SOURCES = lasso_package.c
LassoTesting_la_CFLAGS = $(GLIB_CFLAGS) $(GSL_CFLAGS) $(NCURSES_CFLAGS) $(R_CFLAGS)
LassoTesting_la_LDFLAGS = $(GLIB_LIBS) $(GSL_LIBS) $(NCURSES_LIBS) $(R_CFLAGS) -module
LassoTesting_la_LIBADD = liblasso.la
