# misc_tests = executable('misc-tests', 'misc-tests.cpp', dependencies: dependency('glib-2.0'), link_with: liblasso)
func_tests = executable('func-tests', 'func-tests.cpp', dependencies: [dependency('glib-2.0'), dependency('gsl'), dependency('openmp'), dependency('libxxhash')], link_with: liblasso)

# test('misc tests', misc_tests, args: ['-p', '/misc'],)
test('read_y', func_tests, args: ['-p', '/func/test-read-y-csv'],)
test('read_x', func_tests, args: ['-p', '/func/test-read-x-csv'],)
test('soft_threshold', func_tests, args: ['-p', '/func/test-soft-threshol'],)
#test('update_beta_cyclic', func_tests, args: ['-p', '/func/test-update-beta-cyclic'], should_fail: true)
test('update_intercept_cyclic', func_tests, args: ['-p', '/func/test-update-intercept-cyclic'],)
test('X2_from_X', func_tests, args: ['-p', '/func/test-X2_from_X'],)
test('compressed_main_X', func_tests, args: ['-p', '/func/test-compressed-main-X'],)
#test('cyclic coordinate descent - interactions', func_tests, args: ['-p', '/func/test-simple-coordinate-descent-int'], should_fail: true)
#test('cyclic coordinate descent - shuffled interactions', func_tests, args: ['-p', '/func/test-simple-coordinate-descent-int-shuffle'], should_fail: true)
test('compare_n', func_tests, args: ['-p', '/func/test-check-n'],)
test('merge_n', func_tests, args: ['-p', '/func/test-merge-n'],)
test('X2 encoding', func_tests, args: ['-p', '/func/test-X2-encoding'],)
test('permutation', func_tests, args: ['-p', '/func/test-permutation'],)
test('pruning', func_tests, args: ['-p', '/func/test-branch-pruning'],)
test('pruning speed', func_tests, args: ['-p', '/func/test-branch-pruning-faster'],)
test('pruning accuracy', func_tests, args: ['-p', '/func/test-branch-pruning-accuracy'], timeout: 60,)
test('tuple vals', func_tests, args: ['-p', '/func/test_tuple_vals'],)
test('trivial 3way', func_tests, args: ['-p', '/func/trivial-3way'],)
test('row list without columns', func_tests, args: ['-p', '/func/test_row_list_without_columns'],)
test('check indistinguishable columns', func_tests, args: ['-p', '/func/test_simple_indistinguishable_cols'],)